add uptime-kuma example app

--- a/core/.env.example
+++ b/core/.env.example
@@ -1,4 +1,8 @@
 ACME_EMAIL=email@yourdomain.com
-TRAEFIC_HOST=traefik.yourdomain.com
-PORTAINER_HOST=portainer.yourdomain.com
+
+# traefik.yourdomain.com
+# portainer.yourdomain.com
+# status.yourdomain.com
+DOMAIN=
+
 TRAEFIC_AUTH=
