--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "3"
+version: "3.8"
 
 services:
   traefik:
-    image: traefik:latest
+    image: "traefik:v2.5.6"
     container_name: traefik
     restart: unless-stopped
     security_opt:
@@ -25,12 +25,12 @@ services:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
       - "traefik.http.routers.traefik-secure.entrypoints=websecure"
-      - "traefik.http.routers.traefik-secure.rule=Host(`${TRAEFIC_HOST}`)"
+      - "traefik.http.routers.traefik-secure.rule=Host(`traefic.${DOMAIN}`)"
       - "traefik.http.routers.traefik-secure.middlewares=user-auth@file"
       - "traefik.http.routers.traefik-secure.service=api@internal"
 
   portainer:
-    image: portainer/portainer-ce:latest
+    image: "portainer/portainer-ce:2.9.3"
     container_name: portainer
     restart: unless-stopped
     security_opt:
@@ -41,11 +41,12 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./portainer-data:/data
+    # portainer already has its auth system
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
       - "traefik.http.routers.portainer-secure.entrypoints=websecure"
-      - "traefik.http.routers.portainer-secure.rule=Host(`${PORTAINER_HOST}`)"
+      - "traefik.http.routers.portainer-secure.rule=Host(`portainer.${DOMAIN}`)"
       - "traefik.http.routers.portainer-secure.service=portainer"
       - "traefik.http.services.portainer.loadbalancer.server.port=9000"
 
