--- a/core/traefik-data/traefik.yml
+++ b/core/traefik-data/traefik.yml
@@ -27,8 +27,12 @@ providers:
 certificatesResolvers:
   letsencrypt:
     acme:
-      email: $ACME_EMAIL
+      email: ${ACME_EMAIL}
+      caServer: "https://acme-staging-v02.api.letsencrypt.org/directory"
+      # caServer: "https://acme-v02.api.letsencrypt.org/directory"
       storage: acme.json
       keyType: EC384
       httpChallenge:
         entryPoint: web
+
+
