--- a/core/traefik-data/traefik.yml
+++ b/core/traefik-data/traefik.yml
@@ -27,7 +27,7 @@ providers:
 certificatesResolvers:
   letsencrypt:
     acme:
-      email: '{{ env "ACME_EMAIL" }}'
+      email: nemanja.mitic.elfak@hotmail.com
       caServer: "https://acme-staging-v02.api.letsencrypt.org/directory"
       # caServer: "https://acme-v02.api.letsencrypt.org/directory"
       storage: acme.json
