--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "3.8"
+version: '3.8'
 
 services:
   traefik:
-    image: "traefik:v2.5.6"
+    image: 'traefik:v2.5.6'
     container_name: traefik
     restart: unless-stopped
     security_opt:
@@ -10,8 +10,8 @@ services:
     networks:
       - proxy
     ports:
-      - 80:80
-      - 443:443
+      - '80:80'
+      - '443:443'
     environment:
       - ACME_EMAIL
       - TRAEFIC_AUTH
@@ -22,15 +22,15 @@ services:
       - ./traefik-data/acme.json:/acme.json
       - ./traefik-data/configurations:/configurations
     labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=proxy"
-      - "traefik.http.routers.traefik-secure.entrypoints=websecure"
-      - "traefik.http.routers.traefik-secure.rule=Host(`traefik.${DOMAIN}`)"
-      - "traefik.http.routers.traefik-secure.middlewares=user-auth@file"
-      - "traefik.http.routers.traefik-secure.service=api@internal"
+      - 'traefik.enable=true'
+      - 'traefik.docker.network=proxy'
+      - 'traefik.http.routers.traefik-secure.entrypoints=websecure'
+      - 'traefik.http.routers.traefik-secure.rule=Host(`traefik.${DOMAIN}`)'
+      - 'traefik.http.routers.traefik-secure.middlewares=user-auth@file'
+      - 'traefik.http.routers.traefik-secure.service=api@internal'
 
   portainer:
-    image: "portainer/portainer-ce:2.9.3"
+    image: 'portainer/portainer-ce:2.9.3'
     container_name: portainer
     restart: unless-stopped
     security_opt:
@@ -43,22 +43,12 @@ services:
       - ./portainer-data:/data
     # portainer already has its auth system
     labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=proxy"
-      - "traefik.http.routers.portainer-secure.entrypoints=websecure"
-      - "traefik.http.routers.portainer-secure.rule=Host(`portainer.${DOMAIN}`)"
-      - "traefik.http.routers.portainer-secure.service=portainer"
-      - "traefik.http.services.portainer.loadbalancer.server.port=9000"
-
-  adminer:
-    image: "adminer:4.8.1-standalone"
-    hostname: adminer
-    networks:
-      - proxy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.adminer.rule=Host(`adminer.${DOMAIN}`)"
-      - "traefik.http.services.adminer.loadbalancer.server.port=8080"
+      - 'traefik.enable=true'
+      - 'traefik.docker.network=proxy'
+      - 'traefik.http.routers.portainer-secure.entrypoints=websecure'
+      - 'traefik.http.routers.portainer-secure.rule=Host(`portainer.${DOMAIN}`)'
+      - 'traefik.http.routers.portainer-secure.service=portainer'
+      - 'traefik.http.services.portainer.loadbalancer.server.port=9000'
 
 networks:
   proxy:
