--- a/apps/postgres-external/docker-compose.yml
+++ b/apps/postgres-external/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres:14-alpine
     container_name: postgres-external
     restart: unless-stopped
-    command: postgres -c config_file=/etc/postgresql.conf
+    command: postgres -p 5433 -c config_file=/etc/postgresql.conf
     ports:
       - '5433:5433'
     env_file:
