--- a/apps/adminer/docker-compose.yml
+++ b/apps/adminer/docker-compose.yml
@@ -9,8 +9,9 @@ services:
       - proxy
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.adminer.rule=Host(`adminer.${DOMAIN}`)'
-      - 'traefik.http.services.adminer.loadbalancer.server.port=8080'
+      - 'traefik.http.routers.adminer-https.rule=Host(`adminer.${DOMAIN}`)'
+      - 'traefik.http.routers.adminer-https.entrypoints=websecure'
+      - 'traefik.http.services.adminer-svc.loadbalancer.server.port=8080'
 
 networks:
   proxy:
