NEXTAUTH_URL expand directly in .env.production

--- a/apps/nextjs-prisma-boilerplate/.env.production
+++ b/apps/nextjs-prisma-boilerplate/.env.production
@@ -5,6 +5,6 @@ PROTOCOL=http
 HOSTNAME=nextjs-prisma-boilerplate.localhost3000.live
 PORT=3001
 
-# calculated - expanded
-NEXTAUTH_URL=$PROTOCOL://$HOSTNAME
-
+# next.js wont expand it
+# NEXTAUTH_URL=$PROTOCOL://$HOSTNAME
+NEXTAUTH_URL=https://nextjs-prisma-boilerplate.localhost3000.live
