--- a/apps/adminer/docker-compose.yml
+++ b/apps/adminer/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - proxy
     labels:
       - 'traefik.enable=true'
+      - 'traefik.docker.network=proxy'
       - 'traefik.http.routers.adminer-https.rule=Host(`adminer.${DOMAIN}`)'
       - 'traefik.http.routers.adminer-https.entrypoints=websecure'
       - 'traefik.http.services.adminer-svc.loadbalancer.server.port=8080'
