--- a/apps/nextjs-prisma-boilerplate/docker-compose.yml
+++ b/apps/nextjs-prisma-boilerplate/docker-compose.yml
@@ -1,42 +1,69 @@
 version: '3.8'
 services:
-  nextjs-prisma-prod:
-    container_name: nextjs-prisma-prod
+  npb-app-live:
+    container_name: npb-app-live
     image: nemanjamitic/nextjs-prisma-boilerplate:latest
-    # ports:
-    #   - '3001:3001'
     #command: sleep infinity
     volumes:
       - ./uploads:/app/uploads
-      # uncomment for external access
-      # - ./prisma/pg-config/pg_hba.conf:/etc/postgresql.conf
-      # - ./prisma/pg-config/postgresql.conf:/etc/pg_hba.conf
-    env_file:
-      - .env.production
-      # for now
-      - .env.local
+    # alternative 1 - d-c.yml env vars
+    environment:
+      # public vars
+      - APP_ENV
+      - SITE_PROTOCOL
+      - SITE_HOSTNAME
+      - PORT
+      - NEXTAUTH_URL
+      # private vars
+      - DATABASE_URL
+      - SECRET
+      - FACEBOOK_CLIENT_ID
+      - FACEBOOK_CLIENT_SECRET
+      - GOOGLE_CLIENT_ID
+      - GOOGLE_CLIENT_SECRET
+
+    # alternative 2 - env files
+    # env_file:
+    #   - .env.production.live
+    #   - .env.production.live.local
     labels:
       - 'traefik.enable=true'
       - 'traefik.docker.network=proxy'
-      - 'traefik.http.routers.nextjs-prisma-secure.rule=Host(`${HOSTNAME}`)'
-      - 'traefik.http.routers.nextjs-prisma-secure.entrypoints=websecure'
-      - 'traefik.http.routers.nextjs-prisma-secure.service=nextjs-prisma-svc'
-      - 'traefik.http.services.nextjs-prisma-svc.loadbalancer.server.port=3001'
+      - 'traefik.http.routers.npb-app-secure.rule=Host(`${SITE_HOSTNAME}`)'
+      - 'traefik.http.routers.npb-app-secure.entrypoints=websecure'
+      - 'traefik.http.routers.npb-app-secure.service=npb-app-svc'
+      - 'traefik.http.services.npb-app-svc.loadbalancer.server.port=3001'
     depends_on:
-      - postgres-db-prod
+      - npb-db-live
     networks:
       - proxy
 
-  postgres-db-prod:
-    image: postgres:14-alpine
-    container_name: postgres-db-prod
+  npb-db-live:
+    image: postgres:14.3-bullseye
+    container_name: npb-db-live
     restart: unless-stopped
     ports:
       - '5432:5432'
+    user: '${MY_UID}:${MY_GID}'
     volumes:
       - ./prisma/pg-data:/var/lib/postgresql/data
-    env_file:
-      - .env.local
+    # uncomment for external access
+    # - ./prisma/pg-config/pg_hba.conf:/etc/postgresql.conf
+    # - ./prisma/pg-config/postgresql.conf:/etc/pg_hba.conf
+
+    # alternative 1 - d-c.yml env vars
+    environment:
+      - PGDATA=/var/lib/postgresql/data/data-live
+      # private vars
+      - POSTGRES_HOSTNAME
+      - POSTGRES_PORT
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_DB
+
+    # alternative 2 - env files
+    # env_file:
+    #   - .env.production.live.local
     networks:
       # for adminer
       - proxy
