--- a/apps/dokku/docker-compose.yml
+++ b/apps/dokku/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - 'traefik.docker.network=proxy'
       - 'traefik.http.routers.dokku-https.rule=Host(`dokku.${DOMAIN}`)'
       - 'traefik.http.routers.dokku-https.entrypoints=websecure'
+      - 'traefik.http.routers.dokku-https.service=dokku-svc'
       - 'traefik.http.services.dokku-svc.loadbalancer.server.port=80'
 
 networks:
