--- a/apps/dokku/docker-compose.yml
+++ b/apps/dokku/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       # - "8443:443"
       # - "8080:80"
     environment:
-      - DOKKU_HOSTNAME="dokku.${DOMAIN}"
+      - DOKKU_HOSTNAME=dokku.${DOMAIN}
       - DOKKU_HOST_ROOT=/var/lib/dokku/home/dokku
     volumes:
       - ./dokku-data:/mnt/dokku
