--- a/apps/mern-boilerplate/.env.example
+++ b/apps/mern-boilerplate/.env.example
@@ -1,4 +1,5 @@
 # alternative 2 - put all env vars into one .env file and forward through docker-compose.yml
+# server api must be available through traefik for google and facebook auth
 
 # ----------------------------------
 # client container
@@ -46,3 +47,4 @@ SERVER_URL_DEV=https://localhost:5000
 CLIENT_URL_PROD=https://mern-boilerplate.herokuapp.com
 SERVER_URL_PROD=https://mern-boilerplate.herokuapp.com
 
+PORT=80
