--- a/apps/ssh-server/.env.example
+++ b/apps/ssh-server/.env.example
@@ -1,6 +1,6 @@
 
-# full with subdomain
-SITE_HOSTNAME=preview.amd1.nemanjamitic.com
+# without subdomain
+SITE_HOSTNAME=amd1.nemanjamitic.com
 
 # ssh key
 PUBLIC_KEY=
