--- a/apps/nmc-docker/docker-compose.yml
+++ b/apps/nmc-docker/docker-compose.yml
@@ -27,15 +27,16 @@ services:
       - 'traefik.http.services.nmc-docker.loadbalancer.server.port=8080'
 
       # Redirect router
-      - 'traefik.http.routers.redirect-www.rule=Host(`www.${SITE_HOSTNAME}`)'
-      - 'traefik.http.routers.redirect-www.entrypoints=websecure'
-      - 'traefik.http.routers.redirect-www.middlewares=redirect-to-non-www'
-      - 'traefik.http.routers.redirect-www.service=noop@internal'
+      - 'traefik.http.routers.nmc-docker-redirect-www.rule=Host(`www.${SITE_HOSTNAME}`)'
+      - 'traefik.http.routers.nmc-docker-redirect-www.entrypoints=websecure'
+      - 'traefik.http.routers.nmc-docker-redirect-www.middlewares=nmc-docker-redirect-to-non-www'
+      - 'traefik.http.routers.nmc-docker-redirect-www.service=noop@internal'
 
       # Middleware to redirect to non-www
-      - 'traefik.http.middlewares.redirect-to-non-www.redirectregex.regex=^https://www\\.(.+)'
-      - 'traefik.http.middlewares.redirect-to-non-www.redirectregex.replacement=https://$$\\1'
-      - 'traefik.http.middlewares.redirect-to-non-www.redirectregex.permanent=true'
+      - 'traefik.http.middlewares.nmc-docker-redirect-to-non-www.redirectregex.regex=^https://www\\.(.+)'
+      - 'traefik.http.middlewares.nmc-docker-redirect-to-non-www.redirectregex.replacement=https://$$\\1'
+      - 'traefik.http.middlewares.nmc-docker-redirect-to-non-www.redirectregex.permanent=true'
+
 
 networks:
   proxy:
