--- a/apps/nmc-nginx-with-volume/docker-compose.yml
+++ b/apps/nmc-nginx-with-volume/docker-compose.yml
@@ -29,15 +29,15 @@ services:
       - 'traefik.http.services.nmc-nginx-with-volume.loadbalancer.server.port=8080'
 
       # Redirect router
-      - 'traefik.http.routers.redirect-www.rule=Host(`www.${SITE_HOSTNAME}`)'
-      - 'traefik.http.routers.redirect-www.entrypoints=websecure'
-      - 'traefik.http.routers.redirect-www.middlewares=redirect-to-non-www'
-      - 'traefik.http.routers.redirect-www.service=noop@internal'
+      - 'traefik.http.routers.nmc-nginx-with-volume-redirect-www.rule=Host(`www.${SITE_HOSTNAME}`)'
+      - 'traefik.http.routers.nmc-nginx-with-volume-redirect-www.entrypoints=websecure'
+      - 'traefik.http.routers.nmc-nginx-with-volume-redirect-www.middlewares=nmc-nginx-with-volume-redirect-to-non-www'
+      - 'traefik.http.routers.nmc-nginx-with-volume-redirect-www.service=noop@internal'
 
       # Middleware to redirect to non-www
-      - 'traefik.http.middlewares.redirect-to-non-www.redirectregex.regex=^https://www\\.(.+)'
-      - 'traefik.http.middlewares.redirect-to-non-www.redirectregex.replacement=https://$$\\1'
-      - 'traefik.http.middlewares.redirect-to-non-www.redirectregex.permanent=true'
+      - 'traefik.http.middlewares.nmc-nginx-with-volume-redirect-to-non-www.redirectregex.regex=^https://www\\.(.+)'
+      - 'traefik.http.middlewares.nmc-nginx-with-volume-redirect-to-non-www.redirectregex.replacement=https://$$\\1'
+      - 'traefik.http.middlewares.nmc-nginx-with-volume-redirect-to-non-www.redirectregex.permanent=true'
 
 networks:
   proxy:
