--- a/core/rathole.client.toml.example
+++ b/core/rathole.client.toml.example
@@ -12,23 +12,23 @@ remote_public_key = "public_key"
 # DONT do ANY mapping in docker-compose, just pass traffic from rathole on ports traefik expects
 # in same docker-compose.yml for depends_on
 
-# separated based on token, use same port
-
-# local
-[client.services.traefik-http]
-token = "secret_token_1"
-local_addr = "traefik:80"
-
-[client.services.traefik-https]
-token = "secret_token_1"
-local_addr = "traefik:443"
+# separated based on token
+# use ONLY ONE tunnel on Rathole client, comment out other one 
 
 # pi
 [client.services.pi-traefik-http]
-token = "secret_token_2"
+token = "secret_token_1"
 local_addr = "traefik:80"
 
 [client.services.pi-traefik-https]
-token = "secret_token_2"
+token = "secret_token_1"
 local_addr = "traefik:443"  
 
+# local
+[client.services.local-traefik-http]
+token = "secret_token_2"
+local_addr = "traefik:80"
+
+[client.services.local-traefik-https]
+token = "secret_token_2"
+local_addr = "traefik:443"
