--- a/apps/nginx-with-volume/docker-compose.yml
+++ b/apps/nginx-with-volume/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - 'traefik.docker.network=proxy'
       - 'traefik.http.routers.nginx-with-volume.rule=Host(`${SITE_HOSTNAME}`)'
       - 'traefik.http.routers.nginx-with-volume.entrypoints=websecure'
+      # - 'traefik.http.routers.nginx-with-volume.entrypoints=web'    # for http, disable https redirect in traefik.yml
       - 'traefik.http.routers.nginx-with-volume.service=nginx-with-volume'
       - 'traefik.http.services.nginx-with-volume.loadbalancer.server.port=8080'
 
