githubcities backend and database

--- a/apps/githubcities/.env.example
+++ b/apps/githubcities/.env.example
@@ -1,3 +1,20 @@
-# Traefik var
+# Traefik (docker-compose.yml)
 SITE_HOSTNAME=githubcities.arm1.nemanjamitic.com
+
+# Todo: separate to .env, .env.frontend, .env.backend
+
+# Frontend
+
+# Backend
+BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://lgithubcities.arm1.nemanjamitic.com"
+SECRET_KEY=secret
+FIRST_SUPERUSER=admin@example.com
+FIRST_SUPERUSER_PASSWORD=password
+
+# Postgres
+POSTGRES_SERVER=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=app
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
 
