use free port 5433

--- a/apps/githubcities/.env.example
+++ b/apps/githubcities/.env.example
@@ -13,7 +13,7 @@ FIRST_SUPERUSER_PASSWORD=password
 
 # Postgres
 POSTGRES_SERVER=localhost
-POSTGRES_PORT=5432
+POSTGRES_PORT=5433 # must be free on host
 POSTGRES_DB=app
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
